src/components/apps/OuroborosFlight/Scratchpads/Scratchpads.scss
.scratchpad-header {
  width: 90%;
  background-color: var(--darkPurple);
  height: 100px;
  display: flex;
  padding-left: 5%;
  padding-right: 5%;
  align-items: center;
  border-bottom: 1px solid var(--lightPurple);
  justify-content: space-between;
}
.popup-container {
  position: absolute;
  transform: translate(-150px, 30px);
  width: 280px;
  height: 200px;
}
.sp-item-container {
  display: flex;
  width: 330px;
  height: 240px;
  border: 1px solid var(--lightPurple);
  border-radius: 20px;
  flex-direction: column-reverse;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  position: relative;
}

.sp-content-container {
  padding: 50px;
  gap: 50px;
  display: flex;
  flex-direction: row;
  width: 100%;
}
.sp-content-container-inner {
  @extend .sp-content-container;
  padding: 0px;
  flex-wrap: wrap;
}
.add-scratchpad-content-button {
  @extend .sp-item-container;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-size: 40px;
  font-weight: bold;
  border: 1px solid var(--blue);
}

/////////////////////////////// header buttons
.sp-header-edit {
  padding: 10px;
  background-color: var(--blue);
  width: 80px;
  font-size: 35px;
  height: 45px;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 10px;
}
.sp-header-done {
  @extend .sp-header-edit;
}
.sp-header-add {
  @extend .sp-header-edit;
  width: 120px;
}
.sp-header-delete {
  @extend .sp-header-add;
  background-color: var(--ifrRed);
  width: 160px;
}
.scratchpad-display-container {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 90%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-between;
  background-color: var(--containerBackground);
}
.canvas-container {
  height: 90%;
  background-color: var(--darkPurple);
  width: 90%;
  border: 1px solid var(--blue);
}
.scratchpad-display-header {
  width: 90%;
  background-color: var(--darkPurple);
  height: 100px;
  display: flex;
  padding-left: 5%;
  padding-right: 5%;
  align-items: center;
  border-bottom: 1px solid var(--lightPurple);
  justify-content: space-between;
}
.close-sp-button,
.clear-sp-button {
  @extend .sp-header-done;
}
.remove-button {
  position: absolute;
  top: 10px;
  width: 70px;
  height: 70px;
  right: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 50px;
  border-radius: 100%;
  background-color: var(--ifrRed);
}
.popout-svg {
  position: absolute;
  width: 350px;

  transform: translate(-15px, -30px) scale(1, 1.1);
}
.canvas-positioner {
  position: absolute;
  z-index: 998;
  width: 1800px;
  height: 1200px;
}
.bg-positioner {
  position: absolute;
  z-index: 500;
  width: 1800px;
  height: 1200px;
}
.mini-content-positioner {
  position: absolute;
  top: 0px;
  left: 20px;
}
.mini-preset-positioner {
  position: absolute;
  top: 0px;
  left: 20px;
}
.color-menu {
  position: absolute;
  z-index: 999;
  top: 100px;
  left: 700px;
}
.tool-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 20px;
}
.delete-all-container {
  position: absolute;
  bottom: 150px;
  border-radius: 20px;
  padding: 20px;
  width: 320px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 10px;
  height: 120px;
  left: 882px;
  background-color: var(--darkPurple);
  border: 1px solid var(--lightPurple);
}
.delete-all-container > div {
  padding-bottom: 10px;
  &:last-child {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 10px;
    transition: 0.2s ease;
  }
  &:last-child:hover {
    background-color: var(--ifrRed);
    transition: 0.2s ease;
  }
}
.delete-all-text {
  border-bottom: 1px solid var(--lightPurple);
}

@keyframes hoverAddAnimation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.add-icon {
  transform-origin: 50% 50%;
  transition: 1s ease-in-out;
}

.icon-hover-animation {
  animation: hoverAddAnimation 1s ease-in-out;
}

.icon-reset {
  transform: rotate(0deg);
}

